# BlockType

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  refactor_state.json  refactor_workflow.sh  refactor_workflow.sh.bak.20260424  test_result.xml
.codebuddy/: instructions.md
.codebuddy/plans/: C__20模块阶段2开发_9c33dbeb.md  Stage6-1-IRGen-Audit_f045c903.md  codegen-alloca-bool-cleanup-fix_7d183da0(未完成).md  diagnostics-migration-p1-p5_4496b998.md  diags-3arg-report_b97e87a1(未完成).md  expand-phase7-remaining-tasks_f3eb4c69.md  fix-exprvaluekind-enum-sret-copyelision_975ed6ad.md  fix-switch-non-compound-and-gnu-range_b620f5e8.md  initlist-expected-type-infra_37630e4f.md  remove-brace-from-primary-expr_29385dc9(未完成).md  scope-unification_2bc4c0b7.md  stage-4_1-sema-basics_d6aeb420.md  task-4_2_1-type-factory-completion_7c112456.md  task-4_2_2-type-deduction_c5ef1be7.md  task-4_3_3-qualified-lookup_ce90257a(未完成).md  task-4_3_4-adl-fixes_a7e3a7d2.md  template-specialization-disambiguation_3acf0dbf.md  修复PROJECT_REVIEW_PLAN方案文档错误_f7b222d3.md
.github/workflows/: ci.yml
.trae/rules/: project_rules.md
.workbuddy/: expert-history.json
cmake/: AI.cmake  CompilerOptions.cmake  GTest.cmake  LLVM.cmake
diagnostics/: en-US.yaml  zh-CN.yaml
docs/: CPP23-CPP26-FEATURES.md  PERFORMANCE_BASELINE.md  PHASE0.6_STATUS.md  PHASE0_STATUS.md  PHASE1_AUDIT.md  PHASE1_STATUS.md  PHASE2-AUDIT.md  PHASE2-FIX-PLAN.md  PHASE3-AUDIT.md  PHASE3-GAP-ANALYSIS.md  PROJECT_REVIEW_EXECUTION_PLAN.md  REFACTOR-DeclSpec-Declarator.md  REMAINING_ISSUES_ANALYSIS.md  ROADMAP.md  TECHNICAL_DEBT_INVENTORY.md  TEMPLATESPECIALIZATION-COMPLETE.md  TEST_BASELINE.md  ideal feature.md  开发-前中后-三阶段-核查要求.md  开发-前中后-三阶段-核查要求.rtf  项目组职责和红线.md
docs/architecture/: ARCHITECTURE.md  review_flowchart.md
docs/archive/: 00-MASTER-PLAN.md  PHASE1_REMAINING_ISSUES_2026-04-15.md  Phase1 技术债务清理.md
docs/design/: init-list-type-deduction.md
docs/dev status/: PHASE6-6.1-AUDIT.md  PHASE6-6.2-AUDIT.md  PHASE6-6.3-AUDIT.md  PHASE6-6.4-AUDIT.md  PHASE7-7.1-AUDIT.md  PHASE7-7.2-AUDIT.md  Phase4-4.2+4.3-AUDIT.md  Phase4-4.2+4.3全面核查报告：Stage 4-2 + Stage 4-3.md  Phase5-AUDIT-Stage5-1+5-2 全面核查报告.md  Phase5-AUDIT-Stage5-3+5-4+5-5 全面核查报告.md  SEGFAULT_ANALYSIS.md  function_integration_analysis.md
docs/guides/: AI_API.md  dev-checklist.md
docs/plan/: 00-MASTER-PLAN.md  00-PHASE0-foundation.md  01-PHASE1-lexer-preprocessor.md  02-PHASE2-parser-expression.md  03-PHASE3-parser-declaration.md  04-PHASE4-sema-basics.md  05-PHASE5-template-generics.md  06-PHASE6-irgen.md  07-PHASE7-cpp26-features.md  07-PHASE7-detailed-interface-plan.md  07-PHASE7-feature-verification-report.md  08-PHASE8-target-platform.md  09-PHASE9-integration-release.md  DOC_REORGANIZATION_PLAN.md  P1061R10-and-template-factory-fix.md  PROJECT_PLAN_MASTER.md  task_7_3_2_and_7_4_development_plan.md  task_8_development_plan.md  task_8_wave2_wave3_plan.md  w6-p2-2_template_deduction_plan.md
docs/project_review/: AUTOMATED_VALIDATION_GUIDE.md  DOCUMENT_UPDATE_SUMMARY.md  PHASE_PROGRESS.md  PROJECT_REVIEW_PLAN.md  README.md  REVIEW_TOOLS_README.md  V3_COMPLETION_REPORT.md  VALIDATION_SYSTEM_INDEX.md
examples/ai/: advanced_features.cpp  basic_usage.cpp
refactor_checklists/: dev_A.1.2.json  dev_A.1.json  dev_A.1.json.bak.20260424  dev_A.3.1.json  dev_A.3.json  dev_A.F1.json  review_A.1.2.json  review_A.1.json  review_A.3.1.json  review_A.3.json  review_A.F1.json
scripts/: build.sh  check_performance.py  clean.sh  complete_task.py  phase_validator.py  release.sh  review_manager.py  run_task.sh  test.sh  verify_parser_completeness.py
src/AI/: AIOrchestrator.cpp  ClaudeProvider.cpp  HTTPClient.cpp
src/IR/: APInt.cpp  CMakeLists.txt  DialectLoweringPass.cpp  IRBuilder.cpp  IRCache.cpp  IRConstant.cpp  IRContext.cpp  IRContract.cpp  IRConversionResult.cpp  IRDiagnostic.cpp  IRDialect.cpp  IREquivalenceChecker.cpp  IRErrorCode.cpp  IRFormat.cpp  IRFormatVersion.cpp  IRFuzzer.cpp  IRInstruction.cpp  IRIntegrity.cpp  IRModule.cpp  IRPasses.cpp  IRRemoteCacheClient.cpp  IRTelemetry.cpp  IRType.cpp  IRTypeContext.cpp  IRValue.cpp  TargetLayout.cpp
src/IR/Cache/: CMakeLists.txt
src/IR/Telemetry/: CMakeLists.txt  IRTelemetry.cpp
src/Parse/: CMakeLists.txt  Declarator.cpp  ParseClass.cpp  ParseDecl.cpp  ParseDeclSpec.cpp  ParseExpr.cpp  ParseExprCXX.cpp  ParseStmt.cpp  ParseStmtCXX.cpp  ParseTemplate.cpp  ParseType.cpp  Parser.cpp
src/Unicode/: CMakeLists.txt  Normalization.cpp
tests/: TestHelpers.h  debug_const_array.cpp  debug_const_binding.cpp  debug_for_no_init.cpp  debug_info_test.cpp  debug_simple_var.cpp  debug_two_funcs.cpp  simple_member_test.cpp  test_cast_expr_only.cpp  test_coawait_and_member_pointer.cpp  test_cstyle_cast_simple.cpp  test_include_simple.cpp  test_lambda_capture_types.cpp  test_lambda_closure_type.cpp  test_lambda_cstyle_cast.cpp  test_lambda_minimal.cpp  test_lambda_simple.cpp  test_lambda_with_return.cpp  test_lambda_working.cpp  test_minimal.cpp  test_parser_fixes.cpp  test_trailing_return_and_fold.cpp
tests/diff/: BackendDiffTest.cpp  CMakeLists.txt
tests/fuzz/: CMakeLists.txt  FrontendFuzzer.cpp  IRFuzzer.cpp
tests/integration/: CMakeLists.txt
tests/integration/AI/: ProviderIntegrationTest.cpp
tests/integration/e2e/: E2ECompileTest.cpp
tests/integration/pipeline/: D2PipelineTest.cpp  D3FallbackTest.cpp  D4RegistrationTest.cpp
tests/unit/CodeGen/: ABIInfoTest.cpp  BuiltinFunctionsTest.cpp  CMakeLists.txt  CallingConventionTest.cpp  CodeGenClassTest.cpp  CodeGenConstantTest.cpp  CodeGenDebugInfoTest.cpp  CodeGenExprTest.cpp  CodeGenFunctionTest.cpp  CodeGenStmtTest.cpp  CodeGenTypesTest.cpp  ManglerTest.cpp  OptimizationTest.cpp  TargetInfoTest.cpp
tests/unit/Frontend/: ASTToIRConverterTest.cpp  CMakeLists.txt  CompilerInvocationTest.cpp  FrontendFuzzerTest.cpp  FrontendRegistryTest.cpp  IRConstantEmitterTest.cpp  PluginManagerTest.cpp  StructuredDiagnosticTest.cpp
tests/unit/Module/: CMakeLists.txt  ModuleLinkerTest.cpp  ModuleVisibilityTest.cpp
tools/: CMakeLists.txt  driver.cpp
(+401 files in other folders)
